--- a/ex02/ex02.md
+++ b/ex02/ex02.md
@@ -39,9 +39,9 @@ fi // end of if
 # Script 3 // comment
 INFILE=$1 // writes argument 1 to variable
 OUTFILE=$2 // writes argument 2 to variable
-if [ -e "$INFILE" ] // checks if INFILE is not empty
+if [ -e "$INFILE" ] // checks if INFILE exists
 then // then
-if [ -w "$OUTFILE" ] // cheks if OTUFILE is not empty
+if [ -w "$OUTFILE" ] // cheks if OTUFILE exists and is writeable
 then // then
 cat "$INFILE" >> "$OUTFILE" // extends OUTFILE with INFILE with cat to end of file
 else // else
